update algo.conf, use json format

--- a/algo.conf
+++ b/algo.conf
@@ -1,11 +1,22 @@
-clustering KMeans 2 dataset1.txt
-clustering KMedoids 2 dataset2.txt
-
 {
-    oproot: {
-        op:[{
-
-        }]
-    }
-
+    type: 'clustering',
+    algo: 'KMeans',
+    params: [2],
+    left: {
+              type: 'filter',
+              left: {
+                            type: join,
+                            left: {
+                                    type: 'dataset',
+                                    path: 'dataset1.txt'
+                                   },
+                            right: {
+                                    type: 'dataset',
+                                    path: 'dataset2.txt'
+                                    },
+                            cond: 'left.a = right.a'
+                        },
+              cond: 'left.a > 5'
+          }
 }
+
