parse conf to an operation tree

--- a/algo.conf
+++ b/algo.conf
@@ -1,22 +1,21 @@
 {
-    type: 'clustering',
-    algo: 'KMeans',
-    params: [2],
-    left: {
-              type: 'filter',
-              left: {
-                            type: join,
-                            left: {
-                                    type: 'dataset',
-                                    path: 'dataset1.txt'
-                                   },
-                            right: {
-                                    type: 'dataset',
-                                    path: 'dataset2.txt'
-                                    },
-                            cond: 'left.a = right.a'
-                        },
-              cond: 'left.a > 5'
-          }
+    "type": "clustering",
+    "algo": "KMeans",
+    "params": [2],
+    "left": {
+        "type": "Filter",
+        "left": {
+            "type": "Join",
+            "left": {
+                "type": "Dataset",
+                "arg": "dataset1.txt"
+            },
+            "right": {
+                "type": "Dataset",
+                "arg": "dataset2.txt"
+            },
+            "cond": "left.a = right.a"
+        },
+        "cond": "left.a > 5"
+    }
 }
-
