--- a/algo.conf
+++ b/algo.conf
@@ -1,21 +1,89 @@
-{
-    "type": "clustering",
-    "algo": "KMeans",
-    "params": [2],
-    "left": {
-        "type": "Filter",
-        "left": {
-            "type": "Join",
-            "left": {
-                "type": "Dataset",
-                "arg": "dataset1.txt"
-            },
-            "right": {
-                "type": "Dataset",
-                "arg": "dataset2.txt"
-            },
-            "cond": "left.a = right.a"
-        },
-        "cond": "left.a > 5"
+[
+    {
+        "id": "5a2e869a.e57948",
+        "type": "tab",
+        "label": "tree structured flow"
+    },
+    {
+        "id": "62434ac9.8c4f14",
+        "type": "data-source",
+        "z": "5a2e869a.e57948",
+        "name": "personTable",
+        "alias": "fgg",
+        "x": 161.1999969482422,
+        "y": 249.1999969482422,
+        "wires": [
+            [
+                "6f18d986.9d70e8"
+            ]
+        ]
+    },
+    {
+        "id": "ab14763b.1cef98",
+        "type": "data-source",
+        "z": "5a2e869a.e57948",
+        "name": "nameTable",
+        "alias": "sdfsdf",
+        "x": 164.1999969482422,
+        "y": 379.2000732421875,
+        "wires": [
+            [
+                "6f18d986.9d70e8"
+            ]
+        ]
+    },
+    {
+        "id": "d5858921.25f298",
+        "type": "filter",
+        "z": "5a2e869a.e57948",
+        "name": "",
+        "condition": "personTable.col2 > 3",
+        "x": 548.2000579833984,
+        "y": 310.80003356933594,
+        "wires": [
+            [
+                "ebfed79e.ebd178"
+            ]
+        ]
+    },
+    {
+        "id": "6f18d986.9d70e8",
+        "type": "sql-join",
+        "z": "5a2e869a.e57948",
+        "name": "",
+        "condition": "personTable.col1 = nameTable.col1",
+        "x": 358.2000274658203,
+        "y": 312.3999938964844,
+        "wires": [
+            [
+                "d5858921.25f298"
+            ]
+        ]
+    },
+    {
+        "id": "ebfed79e.ebd178",
+        "type": "project",
+        "z": "5a2e869a.e57948",
+        "name": "",
+        "projections": "personTable.col1 as col1, nameTable.col2 as col2",
+        "x": 706.2000579833984,
+        "y": 310.3999938964844,
+        "wires": [
+            [
+                "cb2cf8e1.6bf358"
+            ]
+        ]
+    },
+    {
+        "id": "cb2cf8e1.6bf358",
+        "type": "kmeans-model",
+        "z": "5a2e869a.e57948",
+        "name": "",
+        "k": "3",
+        "modelName": "mymodel",
+        "strategy": "disk",
+        "x": 885.2000579833984,
+        "y": 310.1999931335449,
+        "wires": []
     }
-}
+]
