--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <spark.version>2.0.0</spark.version>
+        <scala.version.short>2.11</scala.version.short>
+        <scala.version>2.11.8</scala.version>
         <start-class>fdu.App</start-class>
     </properties>
     <parent>
@@ -32,7 +34,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>2.11.8</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-scala_2.11</artifactId>
+            <artifactId>jackson-module-scala_${scala.version.short}</artifactId>
             <version>2.8.4</version>
         </dependency>
         <dependency>
@@ -72,21 +74,27 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
+            <artifactId>spark-sql_${scala.version.short}</artifactId>
             <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
+            <artifactId>spark-mllib_${scala.version.short}</artifactId>
             <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
+            <artifactId>spark-hive_${scala.version.short}</artifactId>
             <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.databricks/spark-csv_2.10 -->
+        <dependency>
+            <groupId>com.databricks</groupId>
+            <artifactId>spark-csv_${scala.version.short}</artifactId>
+            <version>1.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.janino</groupId>
@@ -107,13 +115,13 @@
                 <configuration>
                     <recompileMode>incremental</recompileMode>
                     <args>
-                        <arg>-target:jvm-1.8</arg>
+                        <arg>-target:jvm-1.7</arg>
                     </args>
                     <javacArgs>
                         <javacArg>-source</javacArg>
-                        <javacArg>1.8</javacArg>
+                        <javacArg>1.7</javacArg>
                         <javacArg>-target</javacArg>
-                        <javacArg>1.8</javacArg>
+                        <javacArg>1.7</javacArg>
                     </javacArgs>
                 </configuration>
                 <executions>
