--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,13 +19,13 @@
 log4j.rootCategory=INFO, console, ws
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+log4j.appender.console.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss}{Asia/Shanghai} %p %c{1}: %m%n
 
 # Set custom logger which writes to WebSocket Pipe
 log4j.appender.ws=fdu.util.WebSocketLogAppender
-log4j.appender.ws.layout=org.apache.log4j.PatternLayout
-log4j.appender.ws.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+log4j.appender.ws.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.ws.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss}{Asia/Shanghai} %p %c{1}: %m%n
 
 # Set the default spark-shell log level to WARN. When running the spark-shell, the
 # log level for this class is used to overwrite the root logger's log level, so that
