--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>fdu</groupId>
     <artifactId>algo.picker</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>algo.picker</name>
     <url>http://maven.apache.org</url>
@@ -32,6 +32,11 @@
             <!--<version>1.2</version>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>fdu</groupId>
+            <artifactId>udf-definitions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
             <version>${scala.version}</version>
@@ -55,8 +60,15 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
-            <version>4.3.7.RELEASE</version>
+            <version>5.1.3.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.1.3.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -65,7 +77,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-scala_${scala.version.short}</artifactId>
-            <version>2.8.4</version>
+            <version>2.9.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
